--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -21,21 +21,51 @@ disqus_comments_shortname =
 # Set to enable google analytics
 google_analytics_account =
 
+# Set the repo url for the link to appear
+repo_url =
+# The name of the repo. If must be set if repo_url is set
+repo_name =
+# Must be one of github, gitlab or bitbucket
+repo_type = github
+
+# TODO: NOT IMPLEMENTED
 # Specify a base_url used to generate sitemap.xml links. If not specified, then
 # no sitemap will be built.
 base_url =
 
+# TODO: NOT IMPLEMENTED
 # Allow a separate homepage from the "master_doc"
 homepage =
 
+# TODO: NOT IMPLEMENTED
 # Allow the project link to be overwritten to a custom URL.
 projectlink =
 
 # The maximum depth of the global TOC; set it to -1 to allow unlimited depth
-globaltoc_depth = 2
+globaltoc_depth = 1
 
 # If true, TOC entries that are not ancestors of the current page are collapsed
 globaltoc_collapse = true
 
 # If true, the global TOC tree will also contain hidden entries
 globaltoc_includehidden = true
+
+# The theme color for mobile browsers. Hex Color without the leading #
+theme_color = 3f51b5
+
+# Primary colors:
+# red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
+# teal, green, light-green, lime, yellow, amber, orange, deep-orange,
+# brown, grey, blue-grey, white
+color_primary=blue-grey
+
+# Accent colors:
+# red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
+# teal, green, light-green, lime, yellow, amber, orange, deep-orange
+color_accent=blue-grey
+
+# Minify pages after creation using htmlmin
+minify=False
+
+# Prettify pages, usually only for debugging
+prettify=False
