--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -6,21 +6,25 @@ pygments_style = emacs
 
 [options]
 
+# TODO: Not enabled
 # Set to an html template to load custom HTML for the homepage
 index_template =
 
-# Set the name of the project to appear in the left sidebar.
-project_nav_name =
+# Set the name to appear in the left sidebar/header. If not provided, uses
+# html_short_title if defined, or html_title
+nav_title =
 
-# Path to a touch icon
+# Path to a touch icon, should be 152x152 or larger
 touch_icon =
 
+# TODO: Not enabled
 # Set this value to enable Disqus comments
 disqus_comments_shortname =
 
 # Set to enable google analytics
 google_analytics_account =
 
+# Repository integration
 # Set the repo url for the link to appear
 repo_url =
 # The name of the repo. If must be set if repo_url is set
@@ -28,31 +32,22 @@ repo_name =
 # Must be one of github, gitlab or bitbucket
 repo_type = github
 
-# TODO: NOT IMPLEMENTED
+# Sitemap generation
 # Specify a base_url used to generate sitemap.xml links. If not specified, then
 # no sitemap will be built.
 base_url =
 
-# TODO: NOT IMPLEMENTED
-# Allow a separate homepage from the "master_doc"
-homepage =
-
-# TODO: NOT IMPLEMENTED
-# Allow the project link to be overwritten to a custom URL.
-projectlink =
-
+# TOC Tree generation
 # The maximum depth of the global TOC; set it to -1 to allow unlimited depth
 globaltoc_depth = 1
-
 # If true, TOC entries that are not ancestors of the current page are collapsed
 globaltoc_collapse = true
-
 # If true, the global TOC tree will also contain hidden entries
 globaltoc_includehidden = true
 
+# Colors
 # The theme color for mobile browsers. Hex Color without the leading #
 theme_color = 3f51b5
-
 # Primary colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange,
@@ -62,10 +57,15 @@ color_primary=blue-grey
 # Accent colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange
-color_accent=blue-grey
+color_accent=blue
 
+# Content Minification
 # Minify pages after creation using htmlmin
-minify=False
-
+html_minify=False
 # Prettify pages, usually only for debugging
-prettify=False
+html_prettify=False
+# Minify css files found in the output directory
+css_minify=False
+
+# Set the logo icon
+logo_icon =
