--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -14,7 +14,11 @@ index_template =
 # html_short_title if defined, or html_title
 nav_title =
 
-# Path to a touch icon, should be 152x152 or larger
+# TODO: This could be improved
+# Path to a touch icon. Should be 152x152 or larger. Path is relative
+# to _static, so that if your icon is in _static/images/touch-icon.png,
+# touch_icon would be images/touch-icon.png. Icon must be in _static since
+# this file is not copied
 touch_icon =
 
 # TODO: Not enabled
