--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include LICENSE
 include README.rst
 recursive-include sphinx_material/sphinx_material *
+include versioneer.py
+include sphinx_material/_version.py
