--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,9 @@ versionfile_source = sphinx_material/_version.py
 versionfile_build = sphinx_material/_version.py
 tag_prefix = v
 parentdir_prefix = sphinx_material-
+
+[flake8]
+max-line-length = 90
+# it's not a bug that we aren't using all of hacking
+ignore =
+    E203
