--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -50,8 +50,8 @@ globaltoc_collapse = true
 globaltoc_includehidden = true
 
 # Colors
-# The theme color for mobile browsers. Hex Color without the leading #
-theme_color = 3f51b5
+# The theme color for mobile browsers. Hex color.
+theme_color = #3f51b5
 # Primary colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange,
@@ -73,3 +73,14 @@ css_minify=False
 
 # Set the logo icon
 logo_icon =
+
+# Include the master document at the top of the page in the breadcrumb bar.
+# You must also set this to true if you want to override the rootrellink block, in which
+# case the content of the overridden block will appear
+master_doc=True
+
+# A list of dictionaries where each has three keys:
+#   href: The URL or pagename (str)
+#   title: The title to appear (str)
+#   internal: Flag indicating to use pathto (bool)
+nav_links=
