ENH: Add method to add heros

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -83,4 +83,8 @@ master_doc=True
 #   href: The URL or pagename (str)
 #   title: The title to appear (str)
 #   internal: Flag indicating to use pathto (bool)
-nav_links=
+nav_links =
+
+# Text to appear at the top of the home page in a "hero" div. Must be a
+# dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
+heroes =
