--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
 
 before_install:
   - pip install pip --upgrade
+  - pip install -r requirements.txt -q
+  - pip install -r requirements-dev.txt -q
 
 install:
   - pip install -e .
