Add option to enable/disable

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -88,3 +88,6 @@ nav_links =
 # Text to appear at the top of the home page in a "hero" div. Must be a
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
 heroes =
+
+# Enable the version dropdown feature
+version_dropdown=False
