ENH: Use a dict for versions
Use a dict to supply more information
Improve css

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -56,20 +56,20 @@ theme_color = #3f51b5
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange,
 # brown, grey, blue-grey, white
-color_primary=blue-grey
+color_primary = blue-grey
 
 # Accent colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange
-color_accent=blue
+color_accent = blue
 
 # Content Minification
 # Minify pages after creation using htmlmin
-html_minify=False
+html_minify = False
 # Prettify pages, usually only for debugging
-html_prettify=False
+html_prettify = False
 # Minify css files found in the output directory
-css_minify=False
+css_minify = False
 
 # Set the logo icon
 logo_icon =
@@ -77,7 +77,7 @@ logo_icon =
 # Include the master document at the top of the page in the breadcrumb bar.
 # You must also set this to true if you want to override the rootrellink block, in which
 # case the content of the overridden block will appear
-master_doc=True
+master_doc = True
 
 # A list of dictionaries where each has three keys:
 #   href: The URL or pagename (str)
@@ -89,6 +89,14 @@ nav_links =
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
 heroes =
 
-# Enable the version dropdown feature
-version_dropdown=False
-version_dropdown_text=Versions
+# Enable the version dropdown feature. See the demo site for the structure
+# of the json file required.
+version_dropdown = False
+
+# Text to use in the dropdown menu
+version_dropdown_text = Versions
+
+# Relative path to json file. The default is "versions.json" which assumes the
+# file hosted in the root of the site. You can use other file names or locations, e.g.,
+# "_static/old_versions.json"
+version_json = "versions.json"
