ENH: Improve versions dropdown
closes #22

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -96,6 +96,11 @@ version_dropdown = False
 # Text to use in the dropdown menu
 version_dropdown_text = Versions
 
+# Optional dictionary that to use when populating the version dropdown.
+# The key is the text that appears, and the value is the absolute path
+# of the alternative versions
+version_info =
+
 # Relative path to json file. The default is "versions.json" which assumes the
 # file hosted in the root of the site. You can use other file names or locations, e.g.,
 # "_static/old_versions.json"
