ENH: User table classes
Allow users to white classes for tables

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -105,3 +105,8 @@ version_info =
 # file hosted in the root of the site. You can use other file names or locations, e.g.,
 # "_static/old_versions.json"
 version_json = "versions.json"
+
+# Table classes to _not_ strip.  Must be a list. Classes on this list are *not*
+# removed from tables. All other classes are removed, and only tables with outclasses
+# are styled by default.
+table_classes =
