Adding new theme option for minimal gdpr banner

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -28,6 +28,12 @@ disqus_comments_shortname =
 # Set to enable google analytics
 google_analytics_account =
 
+# GDPR banner link
+# Enter an endpoint link for the "Learn More" url for a Privacy Policy
+# Adds a small banner to the bottom of the page
+# Source: https://github.com/solodev/gdpr-banner
+gdpr_banner_link =
+
 # Repository integration
 # Set the repo url for the link to appear
 repo_url =
