Add an option to include or not the links to parents at nav bar
This PR introduces new theme config option 'nav_bar_display_parents'
that takes control of diplaying links to parent documents (in terms of
TOC) at navigation bar.

Changes to default behavior:

* nothing is changes, since the default value is True

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -85,6 +85,9 @@ master_doc = True
 #   internal: Flag indicating to use pathto (bool)
 nav_links =
 
+# Include links of parent documents at navigation bar
+nav_bar_display_parents = True
+
 # Text to appear at the top of the home page in a "hero" div. Must be a
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
 heroes =
