add support for globaltoc_includeinternal, closes #86

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -48,6 +48,8 @@ globaltoc_depth = 1
 globaltoc_collapse = true
 # If true, the global TOC tree will also contain hidden entries
 globaltoc_includehidden = true
+# If false, the global TOC tree will not contain internal section headings
+globaltoc_includeinternal = true
 
 # Colors
 # The theme color for mobile browsers. Hex color.
