--- a/openff-sphinx-theme/openff-sphinx-theme/theme.conf
+++ b/openff-sphinx-theme/openff-sphinx-theme/theme.conf
@@ -2,7 +2,7 @@
 
 inherit = basic
 stylesheet = material.css
-pygments_style = emacs
+pygments_style = friendly
 
 [options]
 
@@ -43,20 +43,20 @@ base_url =
 
 # TOC Tree generation
 # The maximum depth of the global TOC; set it to -1 to allow unlimited depth
-globaltoc_depth = 1
+globaltoc_depth = 2
 # If true, TOC entries that are not ancestors of the current page are collapsed
 globaltoc_collapse = true
 # If true, the global TOC tree will also contain hidden entries
-globaltoc_includehidden = true
+globaltoc_includehidden = false
 
 # Colors
 # The theme color for mobile browsers. Hex color.
-theme_color = #3f51b5
+theme_color = #015480
 # Primary colors:
-# red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
+# openff-blue, red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange,
 # brown, grey, blue-grey, white
-color_primary = blue-grey
+color_primary = openff-blue
 
 # Accent colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
