--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = openff-sphinx-theme/_version.py
-versionfile_build = openff-sphinx-theme/_version.py
+versionfile_source = openff_sphinx_theme/_version.py
+versionfile_build = openff_sphinx_theme/_version.py
 tag_prefix = v
-parentdir_prefix = openff-sphinx-theme-
+parentdir_prefix = openff_sphinx_theme-
 
 [flake8]
 max-line-length = 90
