--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,3 @@
-sphinx_material
 numpy>=1.16
 pandas
 matplotlib
@@ -8,6 +7,5 @@ jupyter_client
 notebook
 nbconvert
 ipykernel
-recommonmark
-sphinx_markdown_tables
-sphinx-copybutton
+myst-parser
+
