--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           sudo apt-get install pandoc
           python -m pip install --upgrade pip
+          pip install wheel
           if [ -f docs/requirements.txt ]; then pip install -r docs/requirements.txt; fi
 
       - name: Build Sphinx documentation
