--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,5 +8,5 @@ notebook
 nbconvert
 ipykernel
 myst-parser
-git+https://github.com/openforcefield/openff-sphinx-theme.git@master
+git+https://github.com/openforcefield/openff-sphinx-theme.git@main
 
