--- a/openff_sphinx_theme/openff_sphinx_theme/theme.conf
+++ b/openff_sphinx_theme/openff_sphinx_theme/theme.conf
@@ -49,11 +49,11 @@ globaltoc_collapse = true
 # If true, the global TOC tree will also contain hidden entries
 globaltoc_includehidden = false
 
-# Colors
-# Accent colors:
-# red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
-# teal, green, light-green, lime, yellow, amber, orange, deep-orange
-color_accent = blue
+# Color for accents. One of
+# openff-blue, openff-toolkit-blue, openff-yellow, openff-orange
+# aquamarine, lilac, amaranth, grape, violet, pink, pale-green,
+# green, crimson, eggplant, turquoise, or any valid CSS color.
+color_accent = openff-toolkit-blue
 
 # Content Minification
 # Minify pages after creation using htmlmin
