--- a/openff_sphinx_theme/openff_sphinx_theme/theme.conf
+++ b/openff_sphinx_theme/openff_sphinx_theme/theme.conf
@@ -1,29 +1,9 @@
 [theme]
 
 inherit = basic
-stylesheet = openff.css
 pygments_style = friendly
 
 [options]
-
-# TODO: Not enabled
-# Set to an html template to load custom HTML for the homepage
-index_template =
-
-# Set the name to appear in the left sidebar/header. If not provided, uses
-# html_short_title if defined, or html_title
-nav_title =
-
-# TODO: This could be improved
-# Path to a touch icon. Should be 152x152 or larger. Path is relative
-# to _static, so that if your icon is in _static/images/touch-icon.png,
-# touch_icon would be images/touch-icon.png. Icon must be in _static since
-# this file is not copied
-touch_icon =
-
-# TODO: Not enabled
-# Set this value to enable Disqus comments
-disqus_comments_shortname =
 
 # Set to enable google analytics
 google_analytics_account =
@@ -52,7 +32,8 @@ globaltoc_includehidden = false
 # Color for accents. One of
 # openff-blue, openff-toolkit-blue, openff-yellow, openff-orange
 # aquamarine, lilac, amaranth, grape, violet, pink, pale-green,
-# green, crimson, eggplant, turquoise, or any valid CSS color.
+# green, crimson, eggplant, turquoise, or a tuple of RGB values
+# each in the range [0, 255]
 color_accent = openff-toolkit-blue
 
 # Content Minification
@@ -63,12 +44,7 @@ html_prettify = False
 # Minify css files found in the output directory
 css_minify = False
 
-# Set the logo icon
-logo_icon =
-
 # Include the master document at the top of the page in the breadcrumb bar.
-# You must also set this to true if you want to override the rootrellink block, in which
-# case the content of the overridden block will appear
 master_doc = True
 
 # A list of dictionaries where each has three keys:
@@ -81,24 +57,7 @@ nav_links =
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
 heroes =
 
-# Enable the version dropdown feature. See the demo site for the structure
-# of the json file required.
-version_dropdown = False
-
-# Text to use in the dropdown menu
-version_dropdown_text = Versions
-
-# Optional dictionary that to use when populating the version dropdown.
-# The key is the text that appears, and the value is the absolute path
-# of the alternative versions
-version_info =
-
-# Relative path to json file. The default is "versions.json" which assumes the
-# file hosted in the root of the site. You can use other file names or locations, e.g.,
-# "_static/old_versions.json"
-version_json = "versions.json"
-
-# Table classes to _not_ strip.  Must be a list. Classes on this list are *not*
-# removed from tables. All other classes are removed, and only tables with outclasses
-# are styled by default.
-table_classes =
+# list[dict[str, str]] of Socials links. Dicts have three keys:
+# "href", "icon_classes", and optionally "title". Icon classes
+# should be from Academicons or Font Awesome 5 free
+socials =
