Clean up in preparation for actual use

--- a/openff_sphinx_theme/openff_sphinx_theme/theme.conf
+++ b/openff_sphinx_theme/openff_sphinx_theme/theme.conf
@@ -57,6 +57,10 @@ nav_links =
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
 heroes =
 
+# ``True`` to remove default social media links from the footer.
+# ``False`` (default) to keep them, to save everyone copying around the same links.
+clear_openff_socials = False
+
 # list[dict[str, str]] of Socials links. Dicts have three keys:
 # "href", "icon_classes", and optionally "title". Icon classes
 # should be from Academicons or Font Awesome 5 free
