--- a/openff_sphinx_theme/openff_sphinx_theme/theme.conf
+++ b/openff_sphinx_theme/openff_sphinx_theme/theme.conf
@@ -61,7 +61,8 @@ heroes =
 # ``False`` (default) to keep them, to save everyone copying around the same links.
 clear_openff_socials = False
 
-# list[dict[str, str]] of Socials links. Dicts have three keys:
+# list[dict[str, str]] of social media links. Dicts have three keys:
 # "href", "icon_classes", and optionally "title". Icon classes
-# should be from Academicons or Font Awesome 5 free
+# should be from Academicons or Font Awesome 5 free. If not specified,
+# defaults to a selection of socials for the OpenFF Initiative
 socials =
