Include hidden docs in globaltoc by default

--- a/openff_sphinx_theme/openff_sphinx_theme/theme.conf
+++ b/openff_sphinx_theme/openff_sphinx_theme/theme.conf
@@ -27,7 +27,7 @@ globaltoc_depth = 2
 # If true, TOC entries that are not ancestors of the current page are collapsed
 globaltoc_collapse = true
 # If true, the global TOC tree will also contain hidden entries
-globaltoc_includehidden = false
+globaltoc_includehidden = true
 
 # Color for accents. One of
 # openff-blue, openff-toolkit-blue, openff-yellow, openff-orange
