--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -20,13 +20,19 @@ jobs:
         name: Install dependencies
         with:
           python-version: 3.7
-          activate-environment: openff-sphinx-theme-docs
+          activate-environment: docs
           environment-file: docs/environment.yml
           auto-activate-base: false
 
       - name: Install current theme in dev mode
         run: |
           pip install -e .
+
+      - name: Describe environment
+        run: |
+          pwd
+          ls
+          conda list
 
       - name: Build Sphinx documentation
         run: |
@@ -44,7 +50,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Find the PR associated with this push, if there is one.
-      - uses: jwalton/gh-find-current-pr@v1
+      - name: Find the PR number
+        uses: jwalton/gh-find-current-pr@v1
         if: github.event_name == 'pull_request'
         id: findPr
 
