Theme option fo deactivating table handling
Allows the user to define table classes, which
deactivates the complete table handling
by sphinx-material for this specific table.

* Adds table_no_strip to theme.conf
* Sets default value to no-sphinx-material-strip
* Adds docs on customization page

Fixes #119

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -110,3 +110,8 @@ version_json = "versions.json"
 # removed from tables. All other classes are removed, and only tables with outclasses
 # are styled by default.
 table_classes =
+
+# Table classes, which deactivates the overall class striping. If one of the configured
+# classes is set, **all** table classes are kept.
+# This is different to "table_classes", which only keeps the configured classes.
+table_no_strip =
