Added option for a custom primary and accent color

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -55,13 +55,17 @@ theme_color = #3f51b5
 # Primary colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
 # teal, green, light-green, lime, yellow, amber, orange, deep-orange,
-# brown, grey, blue-grey, white
+# brown, grey, blue-grey, white, custom
 color_primary = blue-grey
 
 # Accent colors:
 # red, pink, purple, deep-purple, indigo, blue, light-blue, cyan,
-# teal, green, light-green, lime, yellow, amber, orange, deep-orange
+# teal, green, light-green, lime, yellow, amber, orange, deep-orange, custom
 color_accent = blue
+
+# Custom colors:
+custom_color_primary = 546e7a
+custom_color_accent = 448aff
 
 # Content Minification
 # Minify pages after creation using htmlmin
