Enable changing search placeholder by html_theme_options['search_placeholder']

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -115,3 +115,6 @@ table_classes =
 # classes is set, **all** table classes are kept.
 # This is different to "table_classes", which only keeps the configured classes.
 table_no_strip =
+
+# Enable customizing the placeholder text of the search field
+search_placeholder = 'Search'
