Adapt to notation style of the project

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -117,4 +117,4 @@ table_classes =
 table_no_strip =
 
 # Enable customizing the placeholder text of the search field
-search_placeholder = 'Search'
+search_placeholder_text = "Search"
