Enable changing the localtoc label text via html_theme_options

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -48,6 +48,8 @@ globaltoc_depth = 1
 globaltoc_collapse = true
 # If true, the global TOC tree will also contain hidden entries
 globaltoc_includehidden = true
+# Label text for local TOC
+localtoc_label_text = "Contents"
 
 # Colors
 # The theme color for mobile browsers. Hex color.
