Enable changing nav previous/next words via html_theme_options

--- a/sphinx_material/sphinx_material/theme.conf
+++ b/sphinx_material/sphinx_material/theme.conf
@@ -86,6 +86,9 @@ master_doc = True
 #   title: The title to appear (str)
 #   internal: Flag indicating to use pathto (bool)
 nav_links =
+# Text for previous/next links
+nav_previous_text = "Previous"
+nav_next_text = "Next"
 
 # Text to appear at the top of the home page in a "hero" div. Must be a
 # dict[str, str] of the form pagename: hero text, e.g., {'index': 'text on index'}
